--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
     "typescript": "*"
   },
